test_suite/alan-2022-examples/failing/000310_mutation.alan
source xS0w begin * "" end
